# navigator

./: .gitignore  README.md  config.yaml  pyproject.toml
docs/: architecture.md
scripts/: encode_audio.py
src/navigator/: __init__.py  api.py  bootstrap.py  codec.py  corpus_model.py  generator.py  loop.py  navigate.py  reader.py  schemas.py  settings.py  store.py
tests/: test_codec.py  test_loop.py  test_navigate.py  test_reader.py  test_schemas.py  test_settings.py
